Grease Pencil Draw Box tool allows decreasing subdivisions, but not increasing them #93999

Closed
opened 2021-12-12 22:55:59 +01:00 by Sam Brubaker · 8 comments

Blender Version
3.0.0

Short description of error
The Grease Pencil tools for drawing stroke shapes let you use the mouse wheel to adjust the number of sub-divisions (wheel up for more subdivisions and down for less). The Box drawing tool is the exception to this, however- while making a stroke, it lets you decrease the number of subdivisions with the scroll wheel, but not increase them.

Exact steps for others to reproduce the error
Enter Grease Pencil Draw Mode
Use the Box tool
Before confirming the stroke, use the mouse wheel and observe the number of subdivisions. You can go down, but not up!

**Blender Version** 3.0.0 **Short description of error** The Grease Pencil tools for drawing stroke shapes let you use the mouse wheel to adjust the number of sub-divisions (wheel up for more subdivisions and down for less). The Box drawing tool is the exception to this, however- while making a stroke, it lets you decrease the number of subdivisions with the scroll wheel, but not increase them. **Exact steps for others to reproduce the error** Enter Grease Pencil Draw Mode Use the Box tool Before confirming the stroke, use the mouse wheel and observe the number of subdivisions. You can go down, but not up!
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

#95107 was marked as duplicate of this issue

#95107 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm there is something wrong with that.
Sometimes it goes up one subdivision, but moving the mouse will reset as well...

Can confirm there is something wrong with that. Sometimes it goes up one subdivision, but moving the mouse will reset as well...
Antonio Vazquez self-assigned this 2021-12-20 16:34:00 +01:00

This issue was referenced by aba91a745a

This issue was referenced by aba91a745a505e3e29a2b6cdeeadb0afed60fb38

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @hamza-el-barmaki, @antoniov

Added subscribers: @hamza-el-barmaki, @antoniov
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93999
No description provided.